src/objects/SRMChange__c.object
<CustomObject>
    <description>The SRM Change object is used as a change log as well as change request management object.</description>
    <fields>
        <fullName>AdminComments__c</fullName>
        <label>Admin Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovedByAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the change requested approved by a Salesforce Admin.</description>
        <label>Approved By Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <description>Multi-select picklist that allows users to select the area of the university that this request effects.</description>
        <inlineHelpText>Select the area(s) of the University in which this change will impact.</inlineHelpText>
        <label>Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Academic Services/Student Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni / Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment / Program Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Mentoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Experiences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance / Bursar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid / Scholarship / VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing / PR / Strategic Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Records / Transcript Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Mentoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University Wide / Multiple Departments</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ChangeRequestDetails__c</fullName>
        <inlineHelpText>Please give a detailed explanation of what change you would like to have implemented.</inlineHelpText>
        <label>Requested Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChangeRequestPriority__c</fullName>
        <label>Change Request Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChangeRequestStatus__c</fullName>
        <label>Change Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted to JIRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Project Inception</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChangeTime__c</fullName>
        <inlineHelpText>Please enter the exact  time the change was made.</inlineHelpText>
        <label>Change Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChangeType__c</fullName>
        <label>Change Type</label>
        <picklist>
            <picklistValues>
                <fullName>Application Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Records - Deletion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Records - Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Records - Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment Deficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Template Folder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field on Existing Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Org-wide Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Please Add Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layout Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permission Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist Value by Record Type Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist Value Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Folder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll Up Summary Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharing Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tab</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CreatedByDepartment__c</fullName>
        <description>Formula field that determines the department that the requestor (creator) represents.</description>
        <formula>CreatedBy.Department</formula>
        <label>Created By Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeploymentGroup__c</fullName>
        <description>Picklist to indicate which type of deployment the change type relates to.</description>
        <label>Deployment Group</label>
        <picklist>
            <picklistValues>
                <fullName>Production Approved Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Authorized Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Authorized Change with QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Change (RFC)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DetailsOfChangesMade__c</fullName>
        <label>Changes Made</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DevFull__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if the change has been made in DevFull.</description>
        <label>DevFull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExistingProject__c</fullName>
        <description>Picklist field that allows users to select if their request is part of an existing project.</description>
        <inlineHelpText>Is this request tied to an existing project request?</inlineHelpText>
        <label>Existing Project ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JIRATicket__c</fullName>
        <inlineHelpText>Please enter the exact JIRA ticket address (https://jira.wgu.edu/jira/browse/ RFC-9999).</inlineHelpText>
        <label>JIRA Ticket</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Prod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if the change has been made in Prod.</description>
        <label>Prod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Portfolio management project object.</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>SRM Changes</relationshipLabel>
        <relationshipName>SRMChanges1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QAFull__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if the change has been made in QAFull.</description>
        <label>QAFull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QAResults__c</fullName>
        <description>Open text field indicating the results of quality assurance testing and validation.</description>
        <label>QA Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QualityAssuranceStatus__c</fullName>
        <description>Picklist field to indicate the status of Quality Assurance validation.</description>
        <label>Quality Assurance Status</label>
        <picklist>
            <picklistValues>
                <fullName>QA Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReasonDenied__c</fullName>
        <description>Open text field that allows the Admin to explain why the change request was denied.</description>
        <inlineHelpText>Use this area to explain why the change request was denied.</inlineHelpText>
        <label>Reason Denied</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReasonForChanges__c</fullName>
        <description>Open text field that allows users to enter in the reason for making the request.</description>
        <inlineHelpText>Briefly describe how this change will help the University and/or your department serve our students better.</inlineHelpText>
        <label>Reason for Changes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who the SRM Admin can contact for further information and validation testing.</description>
        <inlineHelpText>Enter the person who the SRM Admin can contact for further information and validation testing.</inlineHelpText>
        <label>Point of Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SRM_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SRMChangeNumber__c</fullName>
        <displayFormat>SRM - {0}</displayFormat>
        <label>SRM Change Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>Picklist indicating the scope of the request.</description>
        <inlineHelpText>Small - Can be completed in less than one day.
Medium - Can be completed in less than three days.
Large - Longer than three days to complete.
Project Needed - a Project Request needs to be submitted through JIRA</inlineHelpText>
        <label>Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UserIsPointOfContact__c</fullName>
        <description>If the current user is the point of contact it returns True else False</description>
        <formula>If($User.PIDM__c= Requester__r.PIDM__c,&apos;True&apos;,&apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserIsPointOfContact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationSteps__c</fullName>
        <description>Open text field to list out the steps needed for quality assurance validation testing.</description>
        <label>Validation Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkCompletedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Lookup for indicating who completed the change request</description>
        <label>Work Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SRMChanges</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SRM Change</label>
    <listViews>
        <fullName>MyOpenSRMRequests</fullName>
        <columns>NAME</columns>
        <columns>ChangeRequestStatus__c</columns>
        <columns>ChangeRequestPriority__c</columns>
        <columns>Scope__c</columns>
        <columns>ChangeType__c</columns>
        <columns>ChangeRequestDetails__c</columns>
        <columns>ApprovedByAdmin__c</columns>
        <columns>DetailsOfChangesMade__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UserIsPointOfContact__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <filters>
            <field>ChangeRequestStatus__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Open SRM Requests</label>
    </listViews>
    <listViews>
        <fullName>NeedProjectAssignment</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>ChangeRequestStatus__c</columns>
        <columns>WorkCompletedBy__c</columns>
        <columns>ChangeType__c</columns>
        <columns>Requester__c</columns>
        <columns>ChangeTime__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>JIRATicket__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
        </filters>
        <label>Need Project Assignment</label>
        <sharedTo>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SRM1Queue</fullName>
        <columns>CREATED_DATE</columns>
        <columns>SRMChangeNumber__c</columns>
        <columns>Scope__c</columns>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Categories__c</columns>
        <columns>ChangeRequestStatus__c</columns>
        <columns>ChangeRequestPriority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>ChangeRequestStatus__c</field>
            <operation>equals</operation>
            <value>Requested,Under Review,In Progress,On Hold</value>
        </filters>
        <filters>
            <field>ChangeRequestStatus__c</field>
            <operation>notEqual</operation>
            <value>Converted to JIRA</value>
        </filters>
        <label>SRM1: Queue</label>
        <queue>SRMAdmins</queue>
        <sharedTo>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SRM2MyOpenRequests</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>ChangeRequestStatus__c</columns>
        <columns>NAME</columns>
        <columns>AdminComments__c</columns>
        <columns>ChangeType__c</columns>
        <columns>JIRATicket__c</columns>
        <columns>Requester__c</columns>
        <columns>Scope__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ChangeRequestStatus__c</field>
            <operation>equals</operation>
            <value>Requested,Under Review,In Progress,On Hold</value>
        </filters>
        <label>SRM2: My Open Requests</label>
        <sharedTo>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SRM3MyCompletedRequests</fullName>
        <columns>NAME</columns>
        <columns>ChangeRequestStatus__c</columns>
        <columns>ChangeType__c</columns>
        <columns>WorkCompletedBy__c</columns>
        <columns>JIRATicket__c</columns>
        <columns>ChangeTime__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ChangeRequestStatus__c</field>
            <operation>equals</operation>
            <value>Denied,Completed,Canceled</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/25/2012 12:00 AM</value>
        </filters>
        <label>SRM3: My Completed Requests</label>
        <sharedTo>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SRM4AllOpen</fullName>
        <columns>SRMChangeNumber__c</columns>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>CreatedByDepartment__c</columns>
        <columns>ChangeType__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>ChangeRequestStatus__c</columns>
        <columns>ChangeRequestPriority__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChangeRequestStatus__c</field>
            <operation>equals</operation>
            <value>Requested,Under Review,In Progress,On Hold</value>
        </filters>
        <label>SRM4: All Open</label>
        <sharedTo>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SRM5All</fullName>
        <columns>SRMChangeNumber__c</columns>
        <columns>NAME</columns>
        <columns>ChangeRequestStatus__c</columns>
        <columns>ChangeType__c</columns>
        <columns>Requester__c</columns>
        <columns>Project__c</columns>
        <columns>WorkCompletedBy__c</columns>
        <columns>JIRATicket__c</columns>
        <columns>ChangeTime__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>SRM5: All</label>
        <sharedTo>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SRM6ProjectRequests</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>Scope__c</columns>
        <columns>NAME</columns>
        <columns>ChangeRequestStatus__c</columns>
        <columns>ChangeRequestPriority__c</columns>
        <columns>AdminComments__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Requester__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Project Needed</value>
        </filters>
        <filters>
            <field>ChangeRequestStatus__c</field>
            <operation>equals</operation>
            <value>Submitted to Project Inception</value>
        </filters>
        <label>SRM6: Project Requests</label>
        <sharedTo>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SRM7ConvertedToJIRA</fullName>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>JIRATicket__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChangeRequestStatus__c</field>
            <operation>equals</operation>
            <value>Converted to JIRA</value>
        </filters>
        <label>SRM7: Converted to JIRA</label>
        <sharedTo>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SRM8QualityAssuranceRequested</fullName>
        <columns>NAME</columns>
        <columns>ChangeRequestPriority__c</columns>
        <columns>ChangeRequestStatus__c</columns>
        <columns>ChangeType__c</columns>
        <columns>DetailsOfChangesMade__c</columns>
        <columns>QualityAssuranceStatus__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QualityAssuranceStatus__c</field>
            <operation>equals</operation>
            <value>QA Needed,QA In Progress</value>
        </filters>
        <label>SRM8: Quality Assurance Requested</label>
        <sharedTo>
            <group>SRMSupport</group>
            <role>QATeam</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>SRM Change Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SRM Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AdminApprovalRequired</fullName>
        <active>true</active>
        <description>Do not allow the change to be completed until an admin has approved.</description>
        <errorConditionFormula>AND(
ApprovedByAdmin__c = false,
text(ChangeRequestStatus__c) = &apos;Completed&apos;, 
OR(
INCLUDES(ChangeType__c, &apos;Formula Field&apos;),
INCLUDES(ChangeType__c, &apos;Field on Existing Object&apos;),
INCLUDES(ChangeType__c, &apos;Workflow&apos;),
INCLUDES(ChangeType__c, &apos;Picklist Value Replacement&apos;)
)
)</errorConditionFormula>
        <errorDisplayField>ApprovedByAdmin__c</errorDisplayField>
        <errorMessage>This type of change needs to be approved by an Admin prior to completion.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MakeChangeTimeRequiredWhenComplete</fullName>
        <active>true</active>
        <description>This validation rule makes the change time required whenever a change is marked as complete.</description>
        <errorConditionFormula>AND
(
text(ChangeRequestStatus__c) = &apos;Completed&apos;, 
ISNULL(ChangeTime__c) = TRUE
)</errorConditionFormula>
        <errorDisplayField>ChangeTime__c</errorDisplayField>
        <errorMessage>Please enter the time the change was made.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MakeReasonDeniedRequiredWhenDenied</fullName>
        <active>true</active>
        <description>This validation rule makes the reason denied required whenever a change is marked as denied.</description>
        <errorConditionFormula>AND
(
text(ChangeRequestStatus__c) = &apos;Denied&apos;, 
ISNULL( ReasonDenied__c ) = TRUE
)</errorConditionFormula>
        <errorDisplayField>ReasonDenied__c</errorDisplayField>
        <errorMessage>Please enter the reason this request was denied.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MakeTypeRequiredWhenComplete</fullName>
        <active>true</active>
        <description>This validation rule makes the change type required whenever a change is marked as complete.</description>
        <errorConditionFormula>AND
(
text(ChangeRequestStatus__c) = &apos;Completed&apos;, 
ISNULL( ChangeType__c ) = TRUE
)</errorConditionFormula>
        <errorDisplayField>ChangeType__c</errorDisplayField>
        <errorMessage>Please enter the type of change that was made.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MakeWorkByRequiredWhenComplete</fullName>
        <active>true</active>
        <description>This validation rule makes the workcompletedby__c required whenever a change is marked as complete.</description>
        <errorConditionFormula>AND
(
text(ChangeRequestStatus__c) = &apos;Completed&apos;, 
ISBLANK( WorkCompletedBy__c ) = TRUE 
)</errorConditionFormula>
        <errorDisplayField>WorkCompletedBy__c</errorDisplayField>
        <errorMessage>Please enter the user that made the change.</errorMessage>
    </validationRules>
</CustomObject>